--- a/_posts/2017-07-25-py-OOP.markdown
+++ b/_posts/2017-07-25-py-OOP.markdown
@@ -615,3 +615,10 @@ for question in Question.query():
 Tout part de l'objet `Question`. Si on cherche quelque chose liée à l'objet `Question`, on doit faire `Question.<un_truc>`. On peut expérimenter dans le shell avec la complétion du code. En regardant ce boutde code pas besoin de savoir comment `Question` marche pour savoir ce que ça fait. C'est assez explicite.
 
 On peut encore faire un peu mieux...
+
+
+TEMPPPPP
+```python
+def download_question(url=DATA_SOURCE_URL):
+    csv_data = StringIO(urllob.urlopen(url).read(100000).decode('utf8'))
+```
