--- a/_posts/2017-07-29-py-OOP2.markdown
+++ b/_posts/2017-07-29-py-OOP2.markdown
@@ -2,7 +2,7 @@
 layout: post
 title: "Py: OOP 2 En pratique"
 subtitle: "Programmation orienté objet"
-date: 2017-07-25
+date: 2017-07-29
 author: Sol
 category: Py
 tags: divers, fr, en
@@ -384,3 +384,7 @@ for question in Question.query():
 Le style change, la façon dont sont exposées les données n'est pas la même non plus. Sur cette exemple simple, la complexité ajoutée pour le resultat fait que le jeu peut ne pas en valoir la chandelle **mais sur des plus gros codes, c'est un game changer**.
 
 Un autre gros avantage de l'encapsulation, c'est que même si Stackoverflow change son format de données (de CSV à XML, par exemple), on a juste à adapter la classe. **Le code qui utilise la classe, lui, n'aura pas besoin de changer**.
+
+# Suite
+
+* [partie 3](/py/py-OOP3.html)
