--- a/_posts/2017-07-29-py-OOP1.markdown
+++ b/_posts/2017-07-29-py-OOP1.markdown
@@ -2,14 +2,14 @@
 layout: post
 title: "Py: OOP 1 intro"
 subtitle: "Programmation orienté objet: introduction"
-date: 2017-07-25
+date: 2017-07-29
 author: Sol
 category: Py
 tags: divers, fr, en
 finished: false
 ---
 
-#### sources
+#### Sources
 * [sam&max](http://sametmax.com/le-guide-ultime-et-definitif-sur-la-programmation-orientee-objet-en-python-a-lusage-des-debutants-qui-sont-rassures-par-les-textes-detailles-qui-prennent-le-temps-de-tout-expliquer-partie-1/)
 
 # Recapitulatif
@@ -358,3 +358,7 @@ Poules et cochons
 ```
 
 Nous constatons que c'est exactement la même chose. `self` **est** `article`. C'est ça que veut dire être l'objet en cours.
+
+## Suite
+
+* [partie 2](/py/py-OOP2.html)
