--- a/_posts/2017-07-29-py-OOP2.markdown
+++ b/_posts/2017-07-29-py-OOP2.markdown
@@ -12,6 +12,15 @@ finished: false
 #### sources
 * [sam&max](http://sametmax.com/le-guide-ultime-et-definitif-sur-la-programmation-orientee-objet-en-python-a-lusage-des-debutants-qui-sont-rassures-par-les-textes-detailles-qui-prennent-le-temps-de-tout-expliquer-partie-1/)
 
+# Recapitulatif
+
+* Un **attribut de classe** est accessible sans avoir à créer d'instance (`NomClasse.attribut_de_classe = "poule"`) et est partagé entre tous les objets de cette classe.
+* Un **attribut d'objet** est uniquement accessible à travers une instance.
+* Une instance peut accéder aux deux.
+* Une **méthode de classe** est accessible sans avoir à créer d'instance. On utilise le décorateur `@classmethod` avant la définition de la méthode. <span style="color:red"> premier argument n'est plus `self` mais `cls` </span> 
+* Les méthodes sans autres paramètres que `self` peuvent être décorées par `@property` pour ne plus avoir à les flanquer de parenthèses lors de l'appel.
+
+
 # TP-1
 
 ## Façon procédurale
