--- a/_posts/2017-07-25-py-divers.markdown
+++ b/_posts/2017-07-25-py-divers.markdown
@@ -9,9 +9,22 @@ tags: divers, fr, en
 finished: false
 ---
 
-## todo:
-* duck typing
+## todo
 * API
+
+## Divers
+
+* Toute valeur en Python est un objet
+* En Python toutes les variables sont des références
+* Il n'y a pas de **vrai** constantes en Python! </span> On parle de constante quand une variable est écrite toute en majuscules (**convention**) et qu'elle est sensé ne jamais changer.
+
+## Duck typing
+
+**Un objet en Python est défini par sa structure (les attributs qu'il contient et les méthodes qu'il lui sont applicables) plutôt que par son type.**
+
+Python est entièrement construit autour de cette idée appelée _**duck-typing**_: 
+
+> "Si je vois un animal qui vole comme un canard, cancane comme un canard, et nage comme un canard, alors j'appelle cet oiseau un cannard" (James Whitcomb Riley)
 
 ## if \_\_name\_\_ == '_\_main\_\_'
 
