--- a/_posts/2017-07-25-py-divers.markdown
+++ b/_posts/2017-07-25-py-divers.markdown
@@ -9,9 +9,6 @@ tags: divers, fr, en
 finished: false
 ---
 
-## todo
-* API
-
 ## Divers
 
 * Toute valeur en Python est un objet
@@ -25,6 +22,11 @@ finished: false
 Python est entièrement construit autour de cette idée appelée _**duck-typing**_: 
 
 > "Si je vois un animal qui vole comme un canard, cancane comme un canard, et nage comme un canard, alors j'appelle cet oiseau un cannard" (James Whitcomb Riley)
+
+## API
+
+<span style="color:red"> A étoffer! </span> <br>
+En bref, c'est une interface.
 
 ## if \_\_name\_\_ == '_\_main\_\_'
 
